--- a/.github/workflows/dependabot-dependency-guard-update.yml
+++ b/.github/workflows/dependabot-dependency-guard-update.yml
@@ -20,7 +20,6 @@ concurrency:
 
 jobs:
   update-dependency-guard:
-    if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
     environment: botmobile
     timeout-minutes: 90
@@ -38,6 +37,9 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           token: ${{ steps.app-token.outputs.token || github.token }}
+
+      - name: print
+        run: cat ./.github/actions/setup-gradle/action.yml
 
       - name: Setup Gradle environment
         uses: ./.github/actions/setup-gradle
